--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <li><a href="#">HTML</a></li>
       <li><a href="../css/index.html">CSS</a></li>
       <li><a href="#">About A1</a></li>
-      <li><a href="../about2.html">About A2</a></li>
+      <li><a href="./about2.html">About A2</a></li>
     </ul>
   </div>
   <!-- End of horizontal Navigation Section -->
