--- a/about2.html
+++ b/about2.html
@@ -127,7 +127,7 @@
     <!-- Start of horizontal Navigation Section -->
     <div class="horizontal-navbar">
         <ul>
-            <li><a href="../index.html">Home</a></li>
+            <li><a href="./index.html">Home</a></li>
             <li><a href="./html/index_HTML.html">HTML</a></li>
             <li><a href="../css/index.html">CSS</a></li>
             <li><a href="./a1.html">About A1</a></li>
