--- a/about2.html
+++ b/about2.html
@@ -127,11 +127,11 @@
     <!-- Start of horizontal Navigation Section -->
     <div class="horizontal-navbar">
         <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./html/index_HTML.html">HTML</a></li>
-            <li><a href="../css/index.html">CSS</a></li>
+            <li><a href="../">Home</a></li>
+            <li><a href="./html/index_HTML">HTML</a></li>
+            <li><a href="../css/index">CSS</a></li>
             <li><a href="./a1.html">About A1</a></li>
-            <li><a class="active" href="../about2.html">About A2</a></li>
+            <li><a class="active" href="../about2">About A2</a></li>
         </ul>
     </div>
     <!-- End of horizontal Navigation Section -->
