newUpdate index.html

--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
   <!-- Start of horizontal Navigation Section -->
   <div class="horizontal-navbar">
     <ul>
-      <li><a class="active" href="../">Home</a></li>
+      <li><a class="active" href="../index.html">Home</a></li>
       <li><a href="#">HTML</a></li>
-      <li><a href="../css/index">CSS</a></li>
+      <li><a href="../css/index.html">CSS</a></li>
       <li><a href="#">About A1</a></li>
-      <li><a href="../about2">About A2</a></li>
+      <li><a href="../about2.html">About A2</a></li>
     </ul>
   </div>
   <!-- End of horizontal Navigation Section -->
