folder link Update about2.html

--- a/about2.html
+++ b/about2.html
@@ -129,7 +129,7 @@
         <ul>
             <li><a href="./index.html">Home</a></li>
             <li><a href="./html/index_HTML.html">HTML</a></li>
-            <li><a href="../css/index.html">CSS</a></li>
+            <li><a href="../CSS/index.html">CSS</a></li>
             <li><a href="./a1.html">About A1</a></li>
             <li><a class="active" href="../about2.html">About A2</a></li>
         </ul>
