--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <br><br>
         <h4 class="heading4">© Created By Aariyan Kumar Team Leader A2 Group</h4>
         <h4 class="heading4"><b>Team Leader: </b><br><br>1.Aariyan Kumar <br> 2.Sanghamitra Dash <br> 3.Loria Manjari
-          Gartia <br> 4.Ajit Mishra</h4>
+          Gartia <br> 4.Ajit Kumar Mishra</h4>
       </div>
     </div>
   </footer>
