--- a/CSS/index.html
+++ b/CSS/index.html
@@ -217,7 +217,7 @@
         <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a href="#">HTML</a></li>
-            <li><a class="active" href="../css/index.html">CSS</a></li>
+            <li><a class="active" href="../CSS/index.html">CSS</a></li>
             <li><a href="#">About A1</a></li>
             <li><a href="../about2.html">About A2</a></li>
         </ul>
