--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
     <ul>
       <li><a class="active" href="../index.html">Home</a></li>
       <li><a href="/root/index_HTML.html">HTML</a></li>
-      <li><a href="./CSS/index.html">CSS</a></li>
-      <li><a href="#">About A1</a></li>
+      <li><a href="/CSS/index.html">CSS</a></li>
+      <li><a href="/root/a1/a1.html">About A1</a></li>
       <li><a href="./about2.html">About A2</a></li>
     </ul>
   </div>
