--- a/root/index_HTML.html
+++ b/root/index_HTML.html
@@ -12,11 +12,11 @@
         <!-- Start of horizontal Navigation Section -->
         <nav>
             <ul class="topnav">
-                <li><a href="#home">HOME</a></li>
-                <li><a class="active" href="/index.html">HTML</a></li>
-                <li><a href="#css">CSS</a></li>
-                <li><a href="./a1/a1.html">A1</a></li>
-                <li><a href="#a2">A2</a></li>
+                <li><a class="active" href="../index.html">Home</a></li>
+                <li><a href="./root/index_HTML.html">HTML</a></li>
+                <li><a href="/CSS/index.html">CSS</a></li>
+                <li><a href="./root/a1/a1.html">About A1</a></li>
+                <li><a href="./about2.html">About A2</a></li>
             </ul>
         </nav>
         <!-- End of horizontal Navigation Section -->
