--- a/root/a1/a1.html
+++ b/root/a1/a1.html
@@ -3,18 +3,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/index_styles.css">
+    <link rel="stylesheet" href="./root/index_styles.css">
     <link rel="stylesheet" href="./a1_styles.css">
 </head>
 <body>
     <!-- Start of horizontal Navigation Section -->
     <nav class="topnav">
         <ul>
-            <li><a href="../index.html">HOME</a></li>
-            <li><a href="/index_HTML.html">HTML</a></li>
-            <li><a href="../css/index.html">CSS</a></li>
-            <li><a class="active" href="#a1">A1</a></li>
-            <li><a href="../about2.html">A2</a></li>
+            <li><a class="active" href="../index.html">Home</a></li>
+            <li><a href="./root/index_HTML.html">HTML</a></li>
+            <li><a href="/CSS/index.html">CSS</a></li>
+            <li><a href="./root/a1/a1.html">About A1</a></li>
+            <li><a href="./about2.html">About A2</a></li>
         </ul>
     </nav>
     <!-- End of horizontal Navigation Section -->
