--- a/root/html_editors/html_editors.html
+++ b/root/html_editors/html_editors.html
@@ -24,39 +24,39 @@
         <!-- Start of vertical Navigation Section -->
         <div class="side-nav">
             <h2>HTML Tutorial</h2>
-            <a href="/index_HTML.html">HTML HOME</a>
-            <a href="/HTML_Introduction/htmlINTRO.html">HTML Introduction</a>
+            <a href="./root/index_HTML.html">HTML HOME</a>
+            <a href="./root/HTML_Introduction/htmlINTRO.html">HTML Introduction</a>
             <a href="#" class="active">HTML Editors</a>
-            <a href="/html_basic/index.html">HTML Basic</a>
+            <a href="./root/html_basic/index.html">HTML Basic</a>
             <a href="#">HTML Elements</a>
-            <a href="/HTML-attribute/index.html">HTML Attributes</a>
-            <a href="/html_heading/index.html">HTML Headings</a>
+            <a href="./root/HTML-attribute/index.html">HTML Attributes</a>
+            <a href="./root/html_heading/index.html">HTML Headings</a>
             <a href="#">HTML Paragraphs</a>
-            <a href="/HTML STYLES/HTML_STYLES.HTML">HTML Styles</a>
+            <a href="./root/HTML STYLES/HTML_STYLES.HTML">HTML Styles</a>
             <a href="#">HTML Formatting</a>
             <a href="#">HTML Quotations</a>
             <a href="#">HTML Comments</a>
-            <a href="/Html_colors/index.html">HTML Colors</a>
-            <a href="/html_css/html_css.html">HTML CSS</a>
+            <a href="./root/Html_colors/index.html">HTML Colors</a>
+            <a href="./root/html_css/html_css.html">HTML CSS</a>
             <a href="">HTML Links</a>
-            <a href="/HTML_Images/index.html">HTML Images</a>
-            <a href="/HTML_FAVICON/HTML_FAVICON/FAVICON/favicon.html">HTML Favicon</a>
-            <a href="/Html page title/html page title.html">HTML Page Title</a>
-            <a href="/HTML_tables/project_table.html">HTML Tables</a>
-            <a href="/html_hlist/hlists1.html">HTML Lists</a>
-            <a href="/html_blocks/index.html">HTML Block & Inline</a>
-            <a href="/html_classes/html_classes.html">HTML Classes</a>
-            <a href="/HTML_Id/Html_Id.html">HTML Id</a>
-            <a href="/Iframe1.html">HTML Iframes</a>
-            <a href="/HTML_JSCRIPT/index.html">HTML JavaScript</a>
-            <a href="/html_filepaths/file_path.html">HTML File Paths</a>
-            <a href="/HTML_head/index.html">HTML Head</a>
-            <a href="/HTML_Layout/index.html">HTML Layout</a>
-            <a href="/html_responsive/index.html">HTML Responsive</a>
-            <a href="/html_computercode/index.html">HTML Computercode</a>
-            <a href="/HTML Semantic Elements.html">HTML Semantics</a>
-            <a href="/STYLE_GUIDE/STYLE.html">HTML Style Guide</a>
-            <a href="/HTML_SYMBOLS/index.html">HTML Symbols</a>
+            <a href="./root/HTML_Images/index.html">HTML Images</a>
+            <a href="./root/HTML_FAVICON/HTML_FAVICON/FAVICON/favicon.html">HTML Favicon</a>
+            <a href="./root/Html page title/html page title.html">HTML Page Title</a>
+            <a href="./root/HTML_tables/project_table.html">HTML Tables</a>
+            <a href="./root/html_hlist/hlists1.html">HTML Lists</a>
+            <a href="./root/html_blocks/index.html">HTML Block & Inline</a>
+            <a href="./root/html_classes/html_classes.html">HTML Classes</a>
+            <a href="./root/HTML_Id/Html_Id.html">HTML Id</a>
+            <a href="./root/Iframe1.html">HTML Iframes</a>
+            <a href="./root/HTML_JSCRIPT/index.html">HTML JavaScript</a>
+            <a href="./root/html_filepaths/file_path.html">HTML File Paths</a>
+            <a href="./root/HTML_head/index.html">HTML Head</a>
+            <a href="./root/HTML_Layout/index.html">HTML Layout</a>
+            <a href="./root/html_responsive/index.html">HTML Responsive</a>
+            <a href="./root/html_computercode/index.html">HTML Computercode</a>
+            <a href="./root/HTML Semantic Elements.html">HTML Semantics</a>
+            <a href="./root/STYLE_GUIDE/STYLE.html">HTML Style Guide</a>
+            <a href="./root/HTML_SYMBOLS/index.html">HTML Symbols</a>
             <a href="#">HTML Emojis</a>
             <a href="#">HTML Charset</a>
             <a href="#">HTML URL Encode</a>
